logs/dag_id=process_data/run_id=manual__2023-09-23T091144.851175+0000/task_id=get_data/attempt=1.log
[2023-09-23T09:11:45.333+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: process_data.get_data manual__2023-09-23T09:11:44.851175+00:00 [queued]>
[2023-09-23T09:11:45.347+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: process_data.get_data manual__2023-09-23T09:11:44.851175+00:00 [queued]>
[2023-09-23T09:11:45.348+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2023-09-23T09:11:45.348+0000] {taskinstance.py:1363} INFO - Starting attempt 1 of 1
[2023-09-23T09:11:45.349+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2023-09-23T09:11:45.367+0000] {taskinstance.py:1383} INFO - Executing <Task(_PythonDecoratedOperator): get_data> on 2023-09-23 09:11:44.851175+00:00
[2023-09-23T09:11:45.373+0000] {standard_task_runner.py:55} INFO - Started process 7493 to run task
[2023-09-23T09:11:45.376+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'process_data', 'get_data', 'manual__2023-09-23T09:11:44.851175+00:00', '--job-id', '68', '--raw', '--subdir', 'DAGS_FOLDER/data_retrieval.py', '--cfg-path', '/tmp/tmpbs2znxwq']
[2023-09-23T09:11:45.377+0000] {standard_task_runner.py:83} INFO - Job 68: Subtask get_data
[2023-09-23T09:11:45.441+0000] {task_command.py:376} INFO - Running <TaskInstance: process_data.get_data manual__2023-09-23T09:11:44.851175+00:00 [running]> on host 411713a30e55
[2023-09-23T09:11:45.508+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=process_data
AIRFLOW_CTX_TASK_ID=get_data
AIRFLOW_CTX_EXECUTION_DATE=2023-09-23T09:11:44.851175+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-09-23T09:11:44.851175+00:00
[2023-09-23T09:11:45.516+0000] {base.py:71} INFO - Using connection ID 'pgdatabase' for task execution.
[2023-09-23T09:11:45.525+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/decorators/base.py", line 188, in execute
    return_value = super().execute(context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 175, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 193, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/data_retrieval.py", line 21, in get_data
    cur.copy_expert("COPY machine_learning_customerchurn FROM STDIN WITH SCV HEADER DELIMITER AS ',' QUOTE '\"'", file,)
psycopg2.errors.SyntaxError: syntax error at or near "SCV"
LINE 1: ...PY machine_learning_customerchurn FROM STDIN WITH SCV HEADER...
                                                             ^

[2023-09-23T09:11:45.534+0000] {taskinstance.py:1406} INFO - Marking task as FAILED. dag_id=process_data, task_id=get_data, execution_date=20230923T091144, start_date=20230923T091145, end_date=20230923T091145
[2023-09-23T09:11:45.546+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 68 for task get_data (syntax error at or near "SCV"
LINE 1: ...PY machine_learning_customerchurn FROM STDIN WITH SCV HEADER...
                                                             ^
; 7493)
[2023-09-23T09:11:45.589+0000] {local_task_job.py:164} INFO - Task exited with return code 1
[2023-09-23T09:11:45.606+0000] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
